--- a/src/config.json
+++ b/src/config.json
@@ -4472,6 +4472,7 @@
     "basedawgzfix.pages.dev",
     "nvdawallet.com",
     "floki.validateme-defi.site",
+    "claim.zknotion.me",
     "user.bitmart-international.org",
     "airdrop-uxlink.org",
     "frgx-finance.web.app",
@@ -32621,6 +32622,7 @@
     "phantomawalet.webflow.io",
     "get-ethbonus.pages.dev",
     "claims-cybro.io",
+    "pay.raydium.meme",
     "m--apps--phantom--com-auth.webflow.io",
     "fantunwalters.gitbook.io",
     "fhautnwalits.gitbook.io",
@@ -41205,6 +41207,7 @@
     "fastsmartsolution.netlify.app",
     "fatty-io.xyz",
     "fatnutz.xyz",
+    "fazeclan.media",
     "fbombnft.net",
     "fbea882a-2269-496a-b64c-86794ccca9f8.resolv.icu",
     "fdshfdghdfg2532.icu",
@@ -42595,6 +42598,7 @@
     "magiceden-mint.pages.dev",
     "magic-eden-login.net",
     "magiceden-io.xyz",
+    "magiceden.media",
     "magiceden-pass.net",
     "magiceeden.github.io",
     "magicswap.trade",
@@ -43510,6 +43514,7 @@
     "mvvdm.xyz",
     "mwettamaske.azurewebsites.net",
     "mxi.cloud",
+    "mvrs.meme",
     "myairdrop.net",
     "myairpepe.com",
     "my-allocations.com",
@@ -47616,6 +47621,7 @@
     "w-smartwebfix.pages.dev",
     "wtao.vercel.app",
     "wsydfa.top",
+    "wven.me",
     "wuniswap.org",
     "wtrust-pad.top",
     "w.wormlhole.bet",
@@ -48540,6 +48546,7 @@
     "tonkeeper-wallet.pro",
     "582413-coinbase.com",
     "b33.run",
+    "zqwspc7e9oxul.me",
     "test-token.vip",
     "wallstreetpepe-official.pages.dev",
     "tadarewards.uno",
@@ -139976,9 +139983,108 @@
     "coinbaseeo.sbs",
     "qoinbase-extension-port.pages.dev",
     "project-coinbse.pages.dev",
-    "webcoinbase.top",
-    "liquidity-coinbase.com",
-    "supportline-coinbase.com",
-    "coinbasewallets.finance"
+    "webcoinbase.top"
+	"chainswap.sushi.baby",
+  "edge.sushi.baby",
+  "clanker.sushi.baby",
+  "ariesmarkets.sushi.baby",
+  "anz.sushi.baby",
+  "cardano.sushi.baby",
+  "m.sushi.baby",
+  "litecoin.sushi.baby",
+  "dood.sushi.baby",
+  "folks.sushi.baby",
+  "kekec.sushi.baby",
+  "fintech.sushi.baby",
+  "wkeydao.sushi.baby",
+  "worldcoin.sushi.baby",
+  "super.sushi.baby",
+  "pumpbtc.sushi.baby",
+  "olympus.sushi.baby",
+  "banana.sushi.baby",
+  "hiveai.sushi.baby",
+  "peipei.sushi.baby",
+  "sand.sushi.baby",
+  "solv.sushi.baby",
+  "tst.sushi.baby",
+  "bluefin.sushi.baby",
+  "contango.sushi.baby",
+  "crt.sushi.baby",
+  "babylon.sushi.us.com",
+  "aio.sushi.us.com",
+  "giza.sushi.us.com",
+  "alpaca.sushi.us.com",
+  "neiro.sushi.us.com",
+  "ena.sushi.us.com",
+  "egl1.sushi.us.com",
+  "mubi.sushi.us.com",
+  "spark.sushi.us.com",
+  "polkastarter.sushi.us.com",
+  "osak.sushi.us.com",
+  "haedal.sushi.us.com",
+  "edge.sushi.us.com",
+  "lightningnetwork.sushi.us.com",
+  "lnq.sushi.us.com",
+  "cookiedao.sushi.us.com",
+  "syrup.sushi.us.com",
+  "anz.sushi.us.com",
+  "polymarket.sushi.us.com",
+  "nonplayablecoin.sushi.us.com",
+  "beefy.sushi.us.com",
+  "cpool.sushi.us.com",
+  "atom.sushi.us.com",
+  "etherfi.sushi.us.com",
+  "cow.sushi.us.com",
+  "kaito.sushi.us.com",
+  "ribbonfinance.sushi.us.com",
+  "titanx.sushi.us.com",
+  "virtual.sushi.us.com",
+  "xny.sushi.us.com",
+  "black.sushi.us.com",
+  "dextools.sushi.us.com",
+  "quant.sushiswap.pro",
+  "doge.sushiswap.pro",
+  "radicle.sushiswap.onl",
+  "bad.sushiswap.onl",
+  "cvc.sushiswap.onl",
+  "renzoprotocol.sushiswap.cyou",
+  "paal.sushiswap.cyou",
+  "fintech.sushiswap.info",
+  "merlinchain.sushiswap.info",
+  "onyx.sushiswap.info",
+  "catslap.sushiswap.info",
+  "layerzero.sushis.dev",
+  "m.sushis.vip",
+  "egld.sushiswap.one",
+  "axondao.sushiswap.one",
+  "broccoli.sushiswap.one",
+  "sand.sushiswap.one",
+  "api3.sushiswap.one",
+  "floki.sushiswap.one",
+  "mog.sushiswap.one",
+  "shfl.sushiswap.one",
+  "bedrock.sushiswap.buzz",
+  "obol.sushiswap.buzz",
+  "yoex.sushiswap.buzz",
+  "milady.sushiswap.buzz",
+  "shi.sushiswap.buzz",
+  "synvision.sushiswap.buzz",
+  "gains.sushiswap.best",
+  "fox.sushiswap.best",
+  "onyx.sushiswap.best",
+  "sto.sushiswap.best",
+  "fintech.sushiswap.best",
+  "olas.sushiswap.tech",
+  "shi.sushiswap.tech",
+  "kekec.sushiswap.tech",
+  "particlenetwork.sushiswap.tech",
+  "sapien.sushiswap.art",
+  "obol.sushiswap.art",
+  "onyx.sushiswap.art",
+  "snt.sushiswap.lol",
+  "virtual.sushiswap.lol",
+  "la.sushiswap.lol",
+  "litecoin.sushiswap.lol",
+  "rendernetwork.sushiswap.lol",
   ]
 }
