Add phishing domains (SushiSwap scam sites with /earn path)
Hi team, please note that the phishing content is under the /earn path.
The root domain redirects to Google by default, but /earn hosts fake wallet connection.
Screenshots attached in PR description.

### Description
This PR adds multiple phishing domains related to fake "Sushi.com" staking platforms.  
The fraudulent content is not at the root domain, but under the /earn path.  
For example:
- Visiting https://sushiswap.lol/ redirects to Google default page.
- Visiting https://virtual.sushiswap.lol/ redirects to Google default page.
- But visiting https://virtual.sushiswap.lol/earn shows a fake "Sushi.com" staking site with a "Connect Wallet" button designed to steal private keys.

### Domains added
- chainswap.sushi.baby
- edge.sushi.baby
- clanker.sushi.baby
- ariesmarkets.sushi.baby
- anz.sushi.baby
- cardano.sushi.baby
- m.sushi.baby
- litecoin.sushi.baby
- dood.sushi.baby
- folks.sushi.baby
- kekec.sushi.baby
- fintech.sushi.baby
- wkeydao.sushi.baby
- worldcoin.sushi.baby
- super.sushi.baby
- pumpbtc.sushi.baby
- olympus.sushi.baby
- banana.sushi.baby
- hiveai.sushi.baby
- peipei.sushi.baby
- sand.sushi.baby
- solv.sushi.baby
- tst.sushi.baby
- bluefin.sushi.baby
- contango.sushi.baby
- crt.sushi.baby
- sosovalue.sushi.baby
- cow.sushi.baby
- dejitarutsuka.sushi.baby
- rz.sushi.baby
- echelon.sushi.baby
- radicle.sushi.baby
- fet.sushi.baby
- lido.sushi.baby
- neural.sushi.baby
- osak.sushi.baby
- polkastarter.sushi.baby
- babylon.sushi.us.com
- aio.sushi.us.com
- giza.sushi.us.com
- alpaca.sushi.us.com
- neiro.sushi.us.com
- ena.sushi.us.com
- egl1.sushi.us.com
- mubi.sushi.us.com
- spark.sushi.us.com
- polkastarter.sushi.us.com
- osak.sushi.us.com
- haedal.sushi.us.com
- edge.sushi.us.com
- lightningnetwork.sushi.us.com
- lnq.sushi.us.com
- cookiedao.sushi.us.com
- syrup.sushi.us.com
- anz.sushi.us.com
- polymarket.sushi.us.com
- 

--- a/src/config.json
+++ b/src/config.json
@@ -243,6 +243,7 @@
     "xmm.kuailewk.vip",
     "linea.web3-support.com",
     "linea-eth.axelar.pro",
+    "sui.twtpad.top",
     "hjf.mkwk.cc",
     "syncswap.portal-zksync.xyz",
     "airdrop.optimism.rs",
@@ -517,6 +518,7 @@
     "opensea.vg",
     "metamask.mobi",
     "metamask6.shop",
+    "iota.twtpad.top",
     "metamask.am",
     "myetherwallet.in",
     "opehsea.app",
@@ -42969,6 +42971,7 @@
     "twitfi-official1-free.xyz",
     "two-ethena.xyz",
     "twnfts.com",
+    "twtpad.top",
     "twt-allocation.com",
     "twrzorwallet.azurewebsites.net",
     "typeai-rewards.com",
@@ -43002,6 +43005,7 @@
     "unisatwallets-dzd.pages.dev",
     "unisat-wallet.org",
     "uniseap.github.io",
+    "uniswap1.top",
     "uniswap.ae.org",
     "uniswap-7wi.pages.dev",
     "uniswap-analysis.com",
@@ -43026,6 +43030,7 @@
     "uniswap.icu",
     "uniswap-info-experimental.vercel.app",
     "uniswap-interface-oexk-4h2bkx8pu-must479.vercel.app",
+    "uniswap-on-ic.top",
     "uni-s-w-ap-org-f1v.pages.dev",
     "un-i-sw-ap-org.pages.dev",
     "uniswap.pages.dev",
@@ -68789,6 +68794,7 @@
     "strawberryai.quest",
     "kjjdm1cp.workers.dev",
     "icougj2w.workers.dev",
+    "udefi.top",
     "bolaice.xyz",
     "z6mpuhwf.workers.dev",
     "yd43fwk1.workers.dev",
@@ -75809,6 +75815,7 @@
     "889712coinbase.com",
     "register-aioz.com",
     "beraborrovv.com",
+    "turbo-sushi.top",
     "carvairdrop.com",
     "pumpswap.run",
     "crunchs.finance",
@@ -82238,6 +82245,7 @@
     "blog.483819-coinbase.com",
     "149c1446.testetst.pages.dev",
     "kayiplar-resmi-olay.b-24.de",
+    "unidex.top",
     "clone.confidentiallayers.icu",
     "app.uniswapdex.cfd",
     "hyper-swap.com",
@@ -90207,6 +90215,7 @@
     "www-ether-fi.com",
     "jupiterdrop.netlify.app",
     "unisocks.xyz",
+    "unisocks.top",
     "defiapp.run",
     "defiapp.digital",
     "claim.defiapp.lat",
@@ -92614,6 +92623,7 @@
     "rdnt-sushi.xyz",
     "rail-sushi.top",
     "pepecoin-sushi.art",
+    "unibot-sushi.top",
     "vanry-sushi.top",
     "titanx-sushi.cfd",
     "toke-sushi.lat",
@@ -94950,6 +94960,7 @@
     "webshop.189034-coinbase.com",
     "coinbase-473403.com",
     "coinbase-213638.com",
+    "u002.top",
     "www4.198242-coinbase.com",
     "soldexis.com",
     "alchemlx.xyz",
@@ -134454,16 +134465,269 @@
     "lombardportal.app",
     "near.trastpad-airs.top",
     "lombard-checker.uno",
-    "sui.trust-funds.top",
-    "sui.trustpiaid.top",
-    "near.trustdpad.top",
-    "near.trustpjad.top",
-    "near.trustpadeo.top",
-    "near.trvstpad.top",
-    "near.trustplad.top",
-    "near.trust-dpad.top",
-    "airdrop-0gfoundation.site",
-    "airdrop.0gfoundetlon.xyz",
-    "foundation-0g.com"
+	"chainswap.sushi.baby",
+"edge.sushi.baby",
+"clanker.sushi.baby",
+"ariesmarkets.sushi.baby",
+"anz.sushi.baby",
+"cardano.sushi.baby",
+"m.sushi.baby",
+"litecoin.sushi.baby",
+"dood.sushi.baby",
+"folks.sushi.baby",
+"kekec.sushi.baby",
+"fintech.sushi.baby",
+"wkeydao.sushi.baby",
+"worldcoin.sushi.baby",
+"super.sushi.baby",
+"pumpbtc.sushi.baby",
+"olympus.sushi.baby",
+"banana.sushi.baby",
+"hiveai.sushi.baby",
+"peipei.sushi.baby",
+"sand.sushi.baby",
+"solv.sushi.baby",
+"tst.sushi.baby",
+"bluefin.sushi.baby",
+"contango.sushi.baby",
+"crt.sushi.baby",
+"sosovalue.sushi.baby",
+"cow.sushi.baby",
+"dejitarutsuka.sushi.baby",
+"rz.sushi.baby",
+"echelon.sushi.baby",
+"radicle.sushi.baby",
+"fet.sushi.baby",
+"lido.sushi.baby",
+"neural.sushi.baby",
+"osak.sushi.baby",
+"polkastarter.sushi.baby",
+"babylon.sushi.us.com",
+"aio.sushi.us.com",
+"giza.sushi.us.com",
+"alpaca.sushi.us.com",
+"neiro.sushi.us.com",
+"ena.sushi.us.com",
+"egl1.sushi.us.com",
+"mubi.sushi.us.com",
+"spark.sushi.us.com",
+"polkastarter.sushi.us.com",
+"osak.sushi.us.com",
+"haedal.sushi.us.com",
+"edge.sushi.us.com",
+"lightningnetwork.sushi.us.com",
+"lnq.sushi.us.com",
+"cookiedao.sushi.us.com",
+"syrup.sushi.us.com",
+"anz.sushi.us.com",
+"polymarket.sushi.us.com",
+"nonplayablecoin.sushi.us.com",
+"beefy.sushi.us.com",
+"cpool.sushi.us.com",
+"atom.sushi.us.com",
+"etherfi.sushi.us.com",
+"cow.sushi.us.com",
+"kaito.sushi.us.com",
+"ribbonfinance.sushi.us.com",
+"titanx.sushi.us.com",
+"virtual.sushi.us.com",
+"xny.sushi.us.com",
+"black.sushi.us.com",
+"dextools.sushi.us.com",
+"quant.sushiswap.pro",
+"doge.sushiswap.pro",
+"radicle.sushiswap.onl",
+"bad.sushiswap.onl",
+"cvc.sushiswap.onl",
+"0x0exchange.sushiswap.onl",
+"bedrock.sushiswap.onl",
+"bittensor.sushiswap.onl",
+"colend.sushiswap.onl",
+"dog.sushiswap.onl",
+"neiro.sushiswap.onl",
+"rune.sushiswap.onl",
+"sfund.sushiswap.onl",
+"tag.sushiswap.onl",
+"yala.sushiswap.onl",
+"renzoprotocol.sushiswap.cyou",
+"paal.sushiswap.cyou",
+"akas.sushiswap.cyou",
+"clanker.sushiswap.cyou",
+"eigen.sushiswap.cyou",
+"fox.sushiswap.cyou",
+"hyperlane.sushiswap.cyou",
+"lagoon.sushiswap.cyou",
+"lnq.sushiswap.cyou",
+"nonplayablecoin.sushiswap.cyou",
+"polymarket.sushiswap.cyou",
+"fintech.sushiswap.info",
+"merlinchain.sushiswap.info",
+"onyx.sushiswap.info",
+"catslap.sushiswap.info",
+"aixbt.sushiswap.info",
+"alpaca.sushiswap.info",
+"brett.sushiswap.info",
+"cardano.sushiswap.info",
+"catslap.sushiswap.info",
+"clanker.sushiswap.info",
+"cpool.sushiswap.info",
+"ena.sushiswap.info",
+"inverse.sushiswap.info",
+"litecoin.sushiswap.info",
+"m3mcd.sushiswap.info",
+"onyx.sushiswap.info",
+"pinksale.sushiswap.info",
+"wise.sushiswap.info",
+"layerzero.sushis.dev",
+"bulla.sushis.dev",
+"amnisfinance.sushis.dev",
+"anz.sushis.dev",
+"bad.sushis.dev",
+"bulla.sushis.dev",
+"clanker.sushis.dev",
+"dexe.sushis.dev",
+"hold.sushis.dev",
+"kibshi.sushis.dev",
+"lightningnetwork.sushis.dev",
+"mellowman.sushis.dev",
+"ratex.sushis.dev",
+"ribbonfinance.sushis.dev",
+"m.sushis.vip",
+"catalorian.sushis.vip",
+"cetus.sushis.vip",
+"cloud.sushis.vip",
+"dragon.sushis.vip",
+"home.sushis.vip",
+"metaplex.sushis.vip",
+"pepe.sushis.vip",
+"red.sushis.vip",
+"ski.sushis.vip",
+"solx.sushis.vip",
+"egld.sushiswap.one",
+"axondao.sushiswap.one",
+"broccoli.sushiswap.one",
+"sand.sushiswap.one",
+"api3.sushiswap.one",
+"floki.sushiswap.one",
+"mog.sushiswap.one",
+"shfl.sushiswap.one",
+"bedrock.sushiswap.buzz",
+"obol.sushiswap.buzz",
+"yoex.sushiswap.buzz",
+"milady.sushiswap.buzz",
+"shi.sushiswap.buzz",
+"synvision.sushiswap.buzz",
+"akas.sushiswap.buzz",
+"ariesmarkets.sushiswap.buzz",
+"catslap.sushiswap.buzz",
+"chaingpt.sushiswap.buzz",
+"crv.sushiswap.buzz",
+"dino.sushiswap.buzz",
+"edge.sushiswap.buzz",
+"gmt.sushiswap.buzz",
+"lmeow.sushiswap.buzz",
+"m.sushiswap.buzz",
+"mubarak.sushiswap.buzz",
+"near.sushiswap.buzz",
+"powerloom.sushiswap.buzz",
+"rai.sushiswap.buzz",
+"renzoprotocol.sushiswap.buzz",
+"shi.sushiswap.buzz",
+"titanx.sushiswap.buzz",
+"vitadao.sushiswap.buzz",
+"xyo.sushiswap.buzz",
+"gains.sushiswap.best",
+"fox.sushiswap.best",
+"onyx.sushiswap.best",
+"sto.sushiswap.best",
+"fintech.sushiswap.best",
+"andy.sushiswap.best",
+"banana.sushiswap.best",
+"btcbull.sushiswap.best",
+"caw.sushiswap.best",
+"dood.sushiswap.best",
+"dx.sushiswap.best",
+"fox.sushiswap.best",
+"fsp.sushiswap.best",
+"got.sushiswap.best",
+"pepu.sushiswap.best",
+"prompt.sushiswap.best",
+"radicle.sushiswap.best",
+"resolv.sushiswap.best",
+"solv.sushiswap.best",
+"tangible.sushiswap.best",
+"towns.sushiswap.best",
+"ufo.sushiswap.best",
+"0x0exchange.sushiswap.tech",
+"aio.sushiswap.tech",
+"avax.sushiswap.tech",
+"axs.sushiswap.tech",
+"bulla.sushiswap.tech",
+"chaingpt.sushiswap.tech",
+"cheems.sushiswap.tech",
+"cswap.sushiswap.tech",
+"fet.sushiswap.tech",
+"got.sushiswap.tech",
+"kekius.sushiswap.tech",
+"lmeow.sushiswap.tech",
+"manyu.sushiswap.tech",
+"olas.sushiswap.tech",
+"osak.sushiswap.tech",
+"reffinance.sushiswap.tech",
+"shi.sushiswap.tech",
+"threshold.sushiswap.tech",
+"vault.sushiswap.tech",
+"virtual.sushiswap.tech",
+"sapien.sushiswap.art",
+"obol.sushiswap.art",
+"onyx.sushiswap.art",
+"bananas31.sushiswap.art",
+"cudis.sushiswap.art",
+"cvc.sushiswap.art",
+"elon.sushiswap.art",
+"extrafinance.sushiswap.art",
+"fintech.sushiswap.art",
+"hemi.sushiswap.art",
+"inverse.sushiswap.art",
+"jasmy.sushiswap.art",
+"lnq.sushiswap.art",
+"neiro.sushiswap.art",
+"onyx.sushiswap.art",
+"phala.sushiswap.art",
+"rsr.sushiswap.art",
+"sapien.sushiswap.art",
+"sxt.sushiswap.art",
+"tree.sushiswap.art",
+"snt.sushiswap.lol",
+"virtual.sushiswap.lol",
+"la.sushiswap.lol",
+"litecoin.sushiswap.lol",
+"rendernetwork.sushiswap.lol",
+"api3.sushiswap.lol",
+"crv.sushiswap.lol",
+"egl1.sushiswap.lol",
+"eigen.sushiswap.lol",
+"ena.sushiswap.lol",
+"ether.sushiswap.lol",
+"etherfi.sushiswap.lol",
+"fhe.sushiswap.lol",
+"got.sushiswap.lol",
+"gpu.sushiswap.lol",
+"gradient.sushiswap.lol",
+"injective.sushiswap.lol",
+"maga.sushiswap.lol",
+"morpho.sushiswap.lol",
+"sca.sushiswap.lol",
+"stg.sushiswap.lol",
+"theinnovationgame.sushiswap.lol",
+"virtual.sushiswap.lol",
+"wbtc.sushiswap.lol",
+"whiterock.sushiswap.lol",
+"aioznetwork.sushis.it.com",
+"hunt.sushis.it.com",
+"la.sushis.it.com",
+"lion.sushis.it.com",
+"maga.sushis.it.com",
+"moodeng.sushis.it.com"
   ]
 }
