Add phishing domains (sushiswap scam /earn paths)
Description
This PR adds multiple phishing domains related to fake SushiSwap staking platforms.
The fraudulent content is not at the root domain, but under the /earn path.
For example:

Visiting https://virtual.sushiswap.lol/ redirects to Google default page.
But visiting https://virtual.sushiswap.lol/earn shows a fake SushiSwap staking site with a "Connect Wallet" button designed to steal private keys.
Domains added
chainswap.sushi.baby
edge.sushi.baby
clanker.sushi.baby
ariesmarkets.sushi.baby
anz.sushi.baby
cardano.sushi.baby
m.sushi.baby
litecoin.sushi.baby
dood.sushi.baby
folks.sushi.baby
kekec.sushi.baby
fintech.sushi.baby
wkeydao.sushi.baby
worldcoin.sushi.baby
super.sushi.baby
pumpbtc.sushi.baby
olympus.sushi.baby
banana.sushi.baby
hiveai.sushi.baby
peipei.sushi.baby
sand.sushi.baby
solv.sushi.baby
tst.sushi.baby
bluefin.sushi.baby
contango.sushi.baby
crt.sushi.baby
babylon.sushi.us.com
aio.sushi.us.com
giza.sushi.us.com
alpaca.sushi.us.com
neiro.sushi.us.com
ena.sushi.us.com
egl1.sushi.us.com
mubi.sushi.us.com
spark.sushi.us.com
polkastarter.sushi.us.com
osak.sushi.us.com
haedal.sushi.us.com
edge.sushi.us.com
lightningnetwork.sushi.us.com
lnq.sushi.us.com
cookiedao.sushi.us.com
syrup.sushi.us.com
anz.sushi.us.com
polymarket.sushi.us.com
nonplayablecoin.sushi.us.com
beefy.sushi.us.com
cpool.sushi.us.com
atom.sushi.us.com
etherfi.sushi.us.com
cow.sushi.us.com
kaito.sushi.us.com
ribbonfinance.sushi.us.com
titanx.sushi.us.com
virtual.sushi.us.com
xny.sushi.us.com
black.sushi.us.com
dextools.sushi.us.com
quant.sushiswap.pro
doge.sushiswap.pro
radicle.sushiswap.onl
bad.sushiswap.onl
cvc.sushiswap.onl
renzoprotocol.sushiswap.cyou
paal.sushiswap.cyou
fintech.sushiswap.info
merlinchain.sushiswap.info
onyx.sushiswap.info
catslap.sushiswap.info
layerzero.sushis.dev
m.sushis.vip
egld.sushiswap.one
axondao.sushiswap.one
broccoli.sushiswap.on

--- a/src/config.json
+++ b/src/config.json
@@ -1317,6 +1317,7 @@
     "blum-airdrop.pages.dev",
     "scorpioncasinoclaim.pages.dev",
     "nc922122.pages.dev",
+    "voslar.top",
     "globalmiracle.online",
     "unisswaap-web.top",
     "jm3-dapp.pages.dev",
@@ -2066,6 +2067,7 @@
     "claim-initia.xyz",
     "coinbasecommerce-invoice-89615.com",
     "enlist-aethircloud.xyz",
+    "wa1l3tconnect.top",
     "basebridge-restore.pages.dev",
     "hamsterslaunch.pages.dev",
     "trogcoin.vip",
@@ -8760,6 +8762,7 @@
     "mypethooligan.world",
     "onchainbirds.pro",
     "hederadao.net",
+    "vtxtoken.top",
     "chilized.com",
     "distribution-ondo.xyz",
     "prizes-paws.xyz",
@@ -31307,6 +31310,7 @@
     "airdrop-usualsmoney.com",
     "reward-usualmoney.com",
     "usualmoneys.net",
+    "usualmoney.top",
     "usualmoney.icu",
     "dropchain.site",
     "usualmoney.dev",
@@ -43212,6 +43216,7 @@
     "verifyquest-n.com",
     "verifys-connect-collab.vercel.app",
     "verify-ultimopay.net",
+    "versaceofficial.top",
     "verify-whop.netlify.app",
     "versedapps-rectifier.pages.dev",
     "verify-zypto.com",
@@ -46497,6 +46502,7 @@
     "app-odosbrige.icu",
     "airdrops-din.top",
     "rfntpool.top",
+    "vpuhpool.top",
     "pmavpool.top",
     "ecckpool.top",
     "osubpool.top",
@@ -64588,6 +64594,7 @@
     "register-redstonefinance.xyz",
     "defilama.space",
     "walleatconnect.gitbook.io",
+    "vxrfdefi.top",
     "dashboard-offer.com",
     "neralcatinetri.info",
     "pieces.bid",
@@ -66059,6 +66066,7 @@
     "pendiefimance.org",
     "aeraedrome.finance",
     "web-aperture.fi",
+    "v3-swellnetwork.top",
     "assets-babyioniabs.app",
     "kiloexs.top",
     "ostpp.ru",
@@ -68157,6 +68165,7 @@
     "stakefarming.live",
     "sui-drop.today",
     "parabex.trade",
+    "ustdt0.top",
     "web3antivirus.run",
     "coinbasescards.ws",
     "coinbaseb.ws",
@@ -82294,6 +82303,7 @@
     "soo-networke.icu",
     "confidentialleyer.space",
     "rwa-allo.digital",
+    "wal-app.top",
     "allo.guru",
     "gempad.xyz",
     "attntoken.io",
@@ -92586,6 +92596,7 @@
     "topia-sushi.top",
     "tet-sushi.top",
     "tel-sushi.top",
+    "vertai-sushi.top",
     "rdnt-sushi.xyz",
     "rail-sushi.top",
     "pepecoin-sushi.art",
@@ -101686,6 +101697,7 @@
     "home--page----coinbase-learn.webflow.io",
     "coinbaseg-wallleth.gitbook.io",
     "demo.coinbasenews.us",
+    "utt-coinbase.top",
     "sso-cdn-coinbasepro-auth.webflow.io",
     "sso-xyz--coinbasepro---auth.webflow.io",
     "coinbaseplay.com",
@@ -102690,6 +102702,7 @@
     "95943993-coinbase.com",
     "exytention-coinbase-support.gitbook.io",
     "help-coinbase--walltt.webflow.io",
+    "verificautenza-coinbase.top",
     "coimbasextenson.webflow.io",
     "web-page-coin-auth.webflow.io",
     "conbsewlletzxtenson.gitbook.io",
@@ -115604,6 +115617,7 @@
     "defi44.com",
     "smsav186.com",
     "defi68.com",
+    "utrx.top",
     "defi86.com",
     "smsav-usdc.com",
     "defi81.com",
@@ -118086,6 +118100,7 @@
     "base-auditextension.site",
     "conbaseprolo_genus.godaddysites.com",
     "nexusstream.netlify.app",
+    "polymarket.com.vbvn.top",
     "claim.infinitt.network",
     "sophweb.online",
     "visit-nodes-sophon.xyz",
@@ -134434,9 +134449,269 @@
     "airdrop.0gfoundetlon.xyz",
     "foundation-0g.com",
     "user.profile-hub.net",
-    "phutomwallte.github.io",
-    "opensea-welt.pages.dev",
-    "revertfinance.pages.dev",
-    "revert-finance.pages.dev"
+	"chainswap.sushi.baby",
+"edge.sushi.baby",
+"clanker.sushi.baby",
+"ariesmarkets.sushi.baby",
+"anz.sushi.baby",
+"cardano.sushi.baby",
+"m.sushi.baby",
+"litecoin.sushi.baby",
+"dood.sushi.baby",
+"folks.sushi.baby",
+"kekec.sushi.baby",
+"fintech.sushi.baby",
+"wkeydao.sushi.baby",
+"worldcoin.sushi.baby",
+"super.sushi.baby",
+"pumpbtc.sushi.baby",
+"olympus.sushi.baby",
+"banana.sushi.baby",
+"hiveai.sushi.baby",
+"peipei.sushi.baby",
+"sand.sushi.baby",
+"solv.sushi.baby",
+"tst.sushi.baby",
+"bluefin.sushi.baby",
+"contango.sushi.baby",
+"crt.sushi.baby",
+"sosovalue.sushi.baby",
+"cow.sushi.baby",
+"dejitarutsuka.sushi.baby",
+"rz.sushi.baby",
+"echelon.sushi.baby",
+"radicle.sushi.baby",
+"fet.sushi.baby",
+"lido.sushi.baby",
+"neural.sushi.baby",
+"osak.sushi.baby",
+"polkastarter.sushi.baby",
+"babylon.sushi.us.com",
+"aio.sushi.us.com",
+"giza.sushi.us.com",
+"alpaca.sushi.us.com",
+"neiro.sushi.us.com",
+"ena.sushi.us.com",
+"egl1.sushi.us.com",
+"mubi.sushi.us.com",
+"spark.sushi.us.com",
+"polkastarter.sushi.us.com",
+"osak.sushi.us.com",
+"haedal.sushi.us.com",
+"edge.sushi.us.com",
+"lightningnetwork.sushi.us.com",
+"lnq.sushi.us.com",
+"cookiedao.sushi.us.com",
+"syrup.sushi.us.com",
+"anz.sushi.us.com",
+"polymarket.sushi.us.com",
+"nonplayablecoin.sushi.us.com",
+"beefy.sushi.us.com",
+"cpool.sushi.us.com",
+"atom.sushi.us.com",
+"etherfi.sushi.us.com",
+"cow.sushi.us.com",
+"kaito.sushi.us.com",
+"ribbonfinance.sushi.us.com",
+"titanx.sushi.us.com",
+"virtual.sushi.us.com",
+"xny.sushi.us.com",
+"black.sushi.us.com",
+"dextools.sushi.us.com",
+"quant.sushiswap.pro",
+"doge.sushiswap.pro",
+"radicle.sushiswap.onl",
+"bad.sushiswap.onl",
+"cvc.sushiswap.onl",
+"0x0exchange.sushiswap.onl",
+"bedrock.sushiswap.onl",
+"bittensor.sushiswap.onl",
+"colend.sushiswap.onl",
+"dog.sushiswap.onl",
+"neiro.sushiswap.onl",
+"rune.sushiswap.onl",
+"sfund.sushiswap.onl",
+"tag.sushiswap.onl",
+"yala.sushiswap.onl",
+"renzoprotocol.sushiswap.cyou",
+"paal.sushiswap.cyou",
+"akas.sushiswap.cyou",
+"clanker.sushiswap.cyou",
+"eigen.sushiswap.cyou",
+"fox.sushiswap.cyou",
+"hyperlane.sushiswap.cyou",
+"lagoon.sushiswap.cyou",
+"lnq.sushiswap.cyou",
+"nonplayablecoin.sushiswap.cyou",
+"polymarket.sushiswap.cyou",
+"fintech.sushiswap.info",
+"merlinchain.sushiswap.info",
+"onyx.sushiswap.info",
+"catslap.sushiswap.info",
+"aixbt.sushiswap.info",
+"alpaca.sushiswap.info",
+"brett.sushiswap.info",
+"cardano.sushiswap.info",
+"catslap.sushiswap.info",
+"clanker.sushiswap.info",
+"cpool.sushiswap.info",
+"ena.sushiswap.info",
+"inverse.sushiswap.info",
+"litecoin.sushiswap.info",
+"m3mcd.sushiswap.info",
+"onyx.sushiswap.info",
+"pinksale.sushiswap.info",
+"wise.sushiswap.info",
+"layerzero.sushis.dev",
+"bulla.sushis.dev",
+"amnisfinance.sushis.dev",
+"anz.sushis.dev",
+"bad.sushis.dev",
+"bulla.sushis.dev",
+"clanker.sushis.dev",
+"dexe.sushis.dev",
+"hold.sushis.dev",
+"kibshi.sushis.dev",
+"lightningnetwork.sushis.dev",
+"mellowman.sushis.dev",
+"ratex.sushis.dev",
+"ribbonfinance.sushis.dev",
+"m.sushis.vip",
+"catalorian.sushis.vip",
+"cetus.sushis.vip",
+"cloud.sushis.vip",
+"dragon.sushis.vip",
+"home.sushis.vip",
+"metaplex.sushis.vip",
+"pepe.sushis.vip",
+"red.sushis.vip",
+"ski.sushis.vip",
+"solx.sushis.vip",
+"egld.sushiswap.one",
+"axondao.sushiswap.one",
+"broccoli.sushiswap.one",
+"sand.sushiswap.one",
+"api3.sushiswap.one",
+"floki.sushiswap.one",
+"mog.sushiswap.one",
+"shfl.sushiswap.one",
+"bedrock.sushiswap.buzz",
+"obol.sushiswap.buzz",
+"yoex.sushiswap.buzz",
+"milady.sushiswap.buzz",
+"shi.sushiswap.buzz",
+"synvision.sushiswap.buzz",
+"akas.sushiswap.buzz",
+"ariesmarkets.sushiswap.buzz",
+"catslap.sushiswap.buzz",
+"chaingpt.sushiswap.buzz",
+"crv.sushiswap.buzz",
+"dino.sushiswap.buzz",
+"edge.sushiswap.buzz",
+"gmt.sushiswap.buzz",
+"lmeow.sushiswap.buzz",
+"m.sushiswap.buzz",
+"mubarak.sushiswap.buzz",
+"near.sushiswap.buzz",
+"powerloom.sushiswap.buzz",
+"rai.sushiswap.buzz",
+"renzoprotocol.sushiswap.buzz",
+"shi.sushiswap.buzz",
+"titanx.sushiswap.buzz",
+"vitadao.sushiswap.buzz",
+"xyo.sushiswap.buzz",
+"gains.sushiswap.best",
+"fox.sushiswap.best",
+"onyx.sushiswap.best",
+"sto.sushiswap.best",
+"fintech.sushiswap.best",
+"andy.sushiswap.best",
+"banana.sushiswap.best",
+"btcbull.sushiswap.best",
+"caw.sushiswap.best",
+"dood.sushiswap.best",
+"dx.sushiswap.best",
+"fox.sushiswap.best",
+"fsp.sushiswap.best",
+"got.sushiswap.best",
+"pepu.sushiswap.best",
+"prompt.sushiswap.best",
+"radicle.sushiswap.best",
+"resolv.sushiswap.best",
+"solv.sushiswap.best",
+"tangible.sushiswap.best",
+"towns.sushiswap.best",
+"ufo.sushiswap.best",
+"0x0exchange.sushiswap.tech",
+"aio.sushiswap.tech",
+"avax.sushiswap.tech",
+"axs.sushiswap.tech",
+"bulla.sushiswap.tech",
+"chaingpt.sushiswap.tech",
+"cheems.sushiswap.tech",
+"cswap.sushiswap.tech",
+"fet.sushiswap.tech",
+"got.sushiswap.tech",
+"kekius.sushiswap.tech",
+"lmeow.sushiswap.tech",
+"manyu.sushiswap.tech",
+"olas.sushiswap.tech",
+"osak.sushiswap.tech",
+"reffinance.sushiswap.tech",
+"shi.sushiswap.tech",
+"threshold.sushiswap.tech",
+"vault.sushiswap.tech",
+"virtual.sushiswap.tech",
+"sapien.sushiswap.art",
+"obol.sushiswap.art",
+"onyx.sushiswap.art",
+"bananas31.sushiswap.art",
+"cudis.sushiswap.art",
+"cvc.sushiswap.art",
+"elon.sushiswap.art",
+"extrafinance.sushiswap.art",
+"fintech.sushiswap.art",
+"hemi.sushiswap.art",
+"inverse.sushiswap.art",
+"jasmy.sushiswap.art",
+"lnq.sushiswap.art",
+"neiro.sushiswap.art",
+"onyx.sushiswap.art",
+"phala.sushiswap.art",
+"rsr.sushiswap.art",
+"sapien.sushiswap.art",
+"sxt.sushiswap.art",
+"tree.sushiswap.art",
+"snt.sushiswap.lol",
+"virtual.sushiswap.lol",
+"la.sushiswap.lol",
+"litecoin.sushiswap.lol",
+"rendernetwork.sushiswap.lol",
+"api3.sushiswap.lol",
+"crv.sushiswap.lol",
+"egl1.sushiswap.lol",
+"eigen.sushiswap.lol",
+"ena.sushiswap.lol",
+"ether.sushiswap.lol",
+"etherfi.sushiswap.lol",
+"fhe.sushiswap.lol",
+"got.sushiswap.lol",
+"gpu.sushiswap.lol",
+"gradient.sushiswap.lol",
+"injective.sushiswap.lol",
+"maga.sushiswap.lol",
+"morpho.sushiswap.lol",
+"sca.sushiswap.lol",
+"stg.sushiswap.lol",
+"theinnovationgame.sushiswap.lol",
+"virtual.sushiswap.lol",
+"wbtc.sushiswap.lol",
+"whiterock.sushiswap.lol",
+"aioznetwork.sushis.it.com",
+"hunt.sushis.it.com",
+"la.sushis.it.com",
+"lion.sushis.it.com",
+"maga.sushis.it.com",
+"moodeng.sushis.it.com"
   ]
 }
